--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -176,6 +176,7 @@
   /* Custom container */
   .custom-container {
     max-width: 1236px;
+    width: 100%;
     margin: 0 auto;
     padding-left: 24px;
     padding-right: 24px;
