Fixations and Add the API

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,8 +178,8 @@
     max-width: 1236px;
     width: 100%;
     margin: 0 auto;
-    padding-left: 24px;
-    padding-right: 24px;
+    /* padding-left: 24px;
+    padding-right: 24px; */
   }
 
   /* Hide scrollbar for horizontal scroll */
